--- a/DOM/DOM/index.html
+++ b/DOM/DOM/index.html
@@ -26,10 +26,12 @@
       <li class="list-group-item">Item 2</li>
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
+      <li>tag name</li>
     </ul>
    </div>
   </div>
 <!-- <script src="dom.js"></script> -->
-<script src="dom1.js"></script>
+<!-- <script src="dom1.js"></script> -->
+<script src="dom2.js"></script>
 </body>
 </html>
